# swarms

./: GoTAgent.py  SIGAERA.py  board_of_directors_swarm.py  chain_of_thought.py  cr_ca_agent copy.py  cr_ca_agent.py  memcrash.py  puppeteer_swarm.py  pyproject.toml  requirements.txt
CPES/: REACT_SUMMARY.md  README.md  pyproject.toml  requirements.txt  setup.py  test_basic.py  test_package.py  test_react.py  test_simple.py
CPES/cpes/: __init__.py  cli.py
CPES/cpes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
CPES/cpes/controllers/: __init__.py  style_adapter.py  value_gate.py
CPES/cpes/core/: __init__.py  cognitive_loop.py  persona.py  react.py
CPES/cpes/memory/: __init__.py  episodic_memory.py  procedural_memory.py  semantic_kg.py
CPES/cpes/tools/: __init__.py  basic_tools.py  memory_tools.py  search_tools.py
CPES/cpes/utils/: __init__.py  anti_drift.py  embedding.py
CPES/docs/: REACT_GUIDE.md
CPES/examples/: __init__.py  caroline_persona.yaml  demo.py  react_demo.py
CPES/tests/: __init__.py
CPES/utils/: llm_wrapper.py
DOCS/swarms/structs/: board_of_directors.md
GETAJOB/: README.md  __init__.py  getajob.py  requirements.txt
YT-std/: README.md  main.py  requirements.txt
compress/: COMPRESSION_EXAMPLES.md  Cargo.toml  README.md  ULTRA_COMPRESSION.md  build.rs  test_compression.py  test_compression.sh
docs/: mkdocs.yml
docs/swarms/agents/: cr_ca_agent.md
examples/multi_agent/board_of_directors/: board_of_directors_example.py
microbiz/: AUTONOMY_GUIDE.md  README.md  config.json  requirements.txt  supervisor.py
microbiz/business/: __init__.py  autonomy.py  board.py  finance.py  integration.py  operations.py  revenue.py
microbiz/config/: business_config.json  sources.json
microbiz/examples/: run_advisory.py  run_semi_auto.py
microbiz/integrations/: __init__.py  github.py  gumroad.py  substack.py
microbiz/modules/: __init__.py  adaptive_parser.py  error_handler.py  memory.py  metrics.py  parser.py  rate_limiter.py  storage.py  summarizer.py  tools.py  validator.py
microbiz/workers/: __init__.py  auctions.py  businesses.py  jobs.py  osint.py  realestate.py  tenders.py
swarms/agents/: AERASIGMA.py  __init__.py  cr_ca_agent.py
swarms/config/: board_config.py
swarms/structs/: agent.py  sequential_workflow.py
swarms/utils/: str_to_dict.py  workspace_manager.py
time_engine/: :memory:  ASTT_PDE_SURROGATE.md  backup_db.sh  bench_solver.py  client.py  demo_cosmo_multiscale_client.py  demo_cosmo_phidesc.py  demo_multiscale_gpu_surrogate.py  demo_run.py  engine.py  entrypoint.sh  env_example.txt  main.py  requirements-dev.txt  requirements.txt  restore_db.sh  run_local.sh  run_tests.sh  time_engine.db-shm  time_engine.db-wal  train_surrogate.py  tui_viz.py
time_engine/adapters/: pde_gpu.py  surrogate_torch.py
time_engine/tests/: test_adapter_api.py  test_apply_boundary.py  test_astt_init.py  test_evolve_state_dispatch.py  test_merge_prune.py  test_pde2d.py  test_pf.py  test_rk45.py  test_sim_and_metrics.py  test_tile_manager_coarse_update.py
