[package]
name = "packstore"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1.5"
zstd = "0.13"
lzma-rs = "0.3"
lmdb = "0.8"
tokio = { version = "1.35", features = ["full"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.5"
prost = "0.12"
prost-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
uuid = { version = "1.6", features = ["v4"] }
flate2 = "1.0"
axum = { version = "0.7", features = ["tokio", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
ed25519-dalek = { version = "2.1", features = ["std"] }
signature = "2.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
filetime = "0.2"

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
tempfile = "3.10"

